# usercfg-opt-parser

./: .pre-commit-config.yaml  LICENSE  README.md  TODO.txt  pyproject.toml
.github/workflows/: pre-commit-update.yml  publish.yml  test.yml
tests/: conftest.py  test_init.py
tests/files/: UserCfg_lf.opt  UserCfg_spaces.opt
