[project]
    name = "usercfg-opt-parser"
    version = "1.0.0"
    description = "Parse Microsoft Flight Simulator UserCfg.opt files"
    readme = "README.md"
    authors = [{ name = "Nathan Vaughn", email = "nath@nvaughn.email" }]
    classifiers = [
        "Intended Audience :: Developers",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
    ]
    requires-python = ">=3.10"
    dependencies = ["lark>=1.1.9"]

[project.urls]
    Homepage   = "https://github.com/NathanVaughn/usercfg-opt-parser"
    Repository = "https://github.com/NathanVaughn/usercfg-opt-parser.git"
    Issues     = "https://github.com/NathanVaughn/usercfg-opt-parser/issues"

[tool.uv]
    dev-dependencies = [
        "pre-commit>=3.7.0",
        "pre-commit-uv>=4.1.2",
        "pytest>=8.1.1",
        "pytest-cov>=5.0.0",
    ]

[tool.coverage.run]
    omit = ["tests/*"]

[tool.pyright]
    typeCheckingMode           = "basic"
    venvPath                   = "."
    venv                       = ".venv"
    reportMissingParameterType = true

[build-system]
    requires      = ["hatchling"]
    build-backend = "hatchling.build"
